objects/APTS_Admin_Mandatory_Cost__c.object
<CustomObject>
    <fields>
        <fullName>APTS_BALID__c</fullName>
        <label>BALID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_Item_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Item Id</label>
        <referenceTo>APTS_Admin_Cost_BreakUp__c</referenceTo>
        <relationshipLabel>Admin Mandatory Costs</relationshipLabel>
        <relationshipName>Admin_Mandatory_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Global__c</fullName>
        <label>Global</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Admin Mandatory Cost</label>
    <listViews>
        <fullName>All</fullName>
        <columns>APTS_Global__c</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_Business_Unit__c</columns>
        <columns>APTS_Product_Group__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>APTS_BALID__c</columns>
        <columns>APTS_Cost_Item_Id__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AMC-{0000000000}</displayFormat>
        <label>Admin Mandatory Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Mandatory Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>